Fix: Dark mode's inline CSS didn't match light mode (it still had a border and drop shadow)

--- a/css/dataTables.dateTime.scss
+++ b/css/dataTables.dateTime.scss
@@ -14,6 +14,9 @@ div.dt-datetime {
 	&.inline {
 		position: relative;
 		box-shadow: none;
+		border: none;
+		z-index: inherit;
+		padding: 6px 0;
 	}
 
 	div.dt-datetime-title {
@@ -290,6 +293,11 @@ html.dark,
 		border: 1px solid rgb(89, 91, 94);
 		background-color: rgb(33, 37, 41);
 		box-shadow: 3px 4px 10px 1px rgba(0, 0, 0, 0.8);
+
+		&.inline {
+			box-shadow: none;
+			border: none;
+		}	
 
 		table {
 			th {
